--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+wrapper {
+    gradleVersion = "8.3"
+    distributionType = Wrapper.DistributionType.ALL
+}
